--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,13 @@
-/* Twoje style */
+.top{
+	margin: 50px 0px 50px 0px;
+}
+#logo{
+	font-size: 60px;
+}
+.nav-link{
+	font-size: 25px;
+}
+.bgnav{
+	background-color: red;
+	color: white;
+}
