--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,20 @@
 .acolor{
 	color: white;
 }
+.navhover:hover{
+	background-color: #000;
+	transition: .5s;
+}
+.secondshadow{
+	box-shadow: 5px 5px 5px rgba(40, 40, 40, 0.1);
+}
+.secondafont{
+	font-size: 1em;
+	color: #ee3733;
+	font-family: 'Archivo', sans-serif;
+	padding-right: 17px;
+	padding-left: 17px;
+}
+.secondafont:hover{
+	color: #000;
+}
