--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 	font-family: 'Archivo', sans-serif;
 }
 .abspadding{
-	margin-top: 100px;
+	padding-left: 120px;
 	color: #eae8e8;
 }
 .liborderone{
@@ -52,4 +52,10 @@
 }
 .secondafont:hover{
 	color: #000;
+}
+.flt{
+	float: right;
+}
+.abssize{
+	font-size: 1.2em;
 }
