--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,13 @@
 .abssize{
 	font-size: 1.2em;
 }
+
+.cimgsize{
+	width: 100%;
+	height: 45vh;
+}
+
+.carousel-inner{
+  width: 100%;
+	max-height: 45vh;
+}
