Dodanie prototypu panelu z nadchodzacymi wydarzeniami

--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,41 @@
   width: 100%;
 	max-height: 45vh;
 }
+
+.date{
+	width: auto;
+	height: auto;
+	background-color: #999966;
+	margin: 0.5vh;
+}
+
+.month{
+	background-color: #009933;
+	text-align: center;
+	padding: 0.5vh 0 0.5vh 0;
+}
+
+.daytext{
+	text-align: center;
+	height: auto;
+	display: block;
+	padding: 1vh 0 1vh 0;
+}
+
+.datelist{
+	padding-bottom: 1vh;
+}
+
+.title{
+	height: 40%;
+	font-size: 1.5em;
+}
+
+.time{
+	height: 60%;
+}
+
+.timetext{
+	padding: 1vh 0 1vh 0;
+	display: block;
+}
