--- a/css/style.css
+++ b/css/style.css
@@ -136,9 +136,10 @@ h1,h2,h3{
 	font-family: 'Sansita', sans-serif;
 }
 
-.eheading{
+.sectionheading{
 	text-align: center;
 	font-size: 2em;
+	margin-bottom: 2%;
 }
 
 .events{
@@ -147,14 +148,51 @@ h1,h2,h3{
 	width: 40%;
 	display: block;
 	float: left;
-	margin: 2% 0 2% 0;
+	margin: 2% 2% 2% 0;
 }
 
-.test{
+.news{
 	display: block;
 	float: left;
+	width: 58%;
+	margin: 2% 0 2% 0;
+	background-color: #E9E7DA;
+	padding: 1%;
 }
 
 .clear{
 	clear: both;
+}
+
+.newsimages{
+	max-width: 30%;
+	height: auto;
+	padding: 0 1% 0 0;
+}
+
+.nimages{
+	width: 100%;
+	height: auto;
+}
+
+.newscontent{
+	width: 100%;
+	margin: 0;
+	padding: 2%;
+}
+
+.newstext{
+	padding: 0;
+}
+
+.newsheading{
+	font-size: 2em;
+	text-align: left;
+	padding-left: 2%;
+}
+
+.newsdescription{
+	margin: 0;
+	padding-left: 2%;
+	text-align: justify;
 }
