--- a/css/style.css
+++ b/css/style.css
@@ -222,3 +222,11 @@ h1,h2,h3{
 	transform: scale(1.1);
 	cursor: pointer;
 }
+.galleryfont{
+	font-family: 'Sansita', sans-serif;
+}
+.gallerybordr{
+	border: 2px solid black;
+	border-radius: 10px;
+	border-color: #343a40;
+}
