--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,12 @@
 
 .cimgsize{
 	width: 100%;
-	height: 45vh;
+	height: 45%;
 }
 
 .carousel-inner{
   width: 100%;
-	max-height: 45vh;
+	max-height: 45%;
 }
 
 .navbackground{
@@ -221,4 +221,29 @@ h1,h2,h3{
 	transition: .5s;
 	transform: scale(1.1);
 	cursor: pointer;
+}
+
+.carouseltext{
+	background-color: rgb(205, 163, 79, 0.85);
+	height: 5%;
+	width: 40%;
+	padding: 0 1% 0 5%;
+	text-align: justify;
+}
+
+.carouselheading{
+	font-size: 200%;
+	padding: 1% 0 1% 0;
+}
+
+@media (max-height: 700px) {
+    .carouselheading{
+        font-size: 100%;
+    }
+}
+
+.carousel-caption{
+	left: 0;
+	right: 0;
+	padding-bottom: 2%;
 }
