--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@
 	transition: .5s;
 }
 .secondshadow{
-	
 	box-shadow: 5px 5px 5px rgba(40, 40, 40, 0.1);
 }
 .secondafont{
@@ -49,9 +48,6 @@
 }
 .secondafont:hover{
 	color: #000;
-}
-.flt{
-	
 }
 .abssize{
 	font-size: 1.4em;
@@ -106,14 +102,12 @@
 .monthtext{
 	margin: 0;
 	padding: 7.5% 0 7.5% 0;
-	font-size: auto; /*TODO Do poprawy*/
 }
 
 .daytext{
 	text-align: center;
 	padding: 15% 0 15% 0;
 	margin: 0;
-	font-size: auto; /*TODO Do poprawy*/
 }
 
 .datelist{
@@ -265,4 +259,13 @@ h1,h2,h3{
 #news{
   margin-top: -90px;
   padding-top: 90px;
+}
+
+.survey{
+	padding: 1%;
+	padding: 1% 7% 1% 7%;
+}
+
+.surveyheading{
+	text-align: center;
 }
